--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.1.1",
+    "@material-tailwind/react": "^2.0.3",
     "axios": "^1.4.0",
+    "formik": "^2.4.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
@@ -19,6 +22,7 @@
     "react-hook-form": "^7.44.3",
     "react-router-dom": "^6.12.1",
     "sort-by": "^1.2.0",
+    "web-vitals": "^3.3.2",
     "yup": "^1.2.0"
   },
   "devDependencies": {
